security/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-test-ns
