security/network-policy-sample-serviceA.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea
  labels:
    app: ServiceA
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ServiceA
  template:
    metadata:
      labels:
        app: ServiceA
    spec:
      containers:
      - image: nginx:latest
        name: servicea
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: servicea
  labels:
    app: ServiceA
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: ServiceA
